--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,7 @@ pipeline{
             }
             steps{
                 echo 'develop branch deploy code'
-                echo ' buiding artifact from develop branch'
+                echo ' Buiding artifact from develop branch'
             }
         }
     }
