--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,7 +15,7 @@ pipeline{
                 branch 'develop'
             }
             steps{
-                echo 'develop branch deploy code'
+                echo 'Develop branch deploy code'
                 echo ' Buiding artifact from develop branch'
             }
         }
